fix: image spill over issue fixed

--- a/src/component/GameBox.css
+++ b/src/component/GameBox.css
@@ -22,16 +22,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
-  height: 150px;
+  width: 8rem;
+  height: 8rem;
   border-radius: 50%;
   background-color: #f9f9f9;
   border: 2px solid #ddd;
+  /* overflow: hidden; */
+  padding: 0.8rem;
 }
 
 .rockBox .item img {
-  width: 120px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 .rockBox h2 {
